Use Glitch instead of Thimble

--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
 						<li><a href="day5.html">Day 5: JavaScript and the DOM</a></li>
 					</ul>
 				</section>
-				<section>
-					<h2>Use <a href="https://thimble.mozilla.org/en-US/">Thimble</a>!</h2>
-					<p><a href="https://thimble.mozilla.org/en-US/">Thimble</a> is nifty tool made by Mozilla that lets you create and edit HTML, CSS, and JS right in your browser.</p>
-					<p>You can use it for any of the exercises or homework we do in this class.</p>
-					
-				</section>
+        <section>
+          <h2>Tools for the Job</h2>
+          <div>
+            <a href="https://www.google.com/chrome/browser/desktop/index.html">
+              <h3 class="brand-salmon">Chrome</h3>
+            </a>
+          </div>
+          <div>
+            <a href="https://glitch.com/">
+              <h3 class="brand-salmon">Glitch</h3>
+            </a>
+          </div>
+          <aside class="notes">
+            <p>Have students download Chrome if they don't already have it.</p>
+            <p>Glitch is nifty online tool that lets you create and edit HTML, CSS, and JS in the browser.</p>
+            <p>We'll use it for all the exercises and homework we do in this class.</p>
+          </aside>
+        </section>
 			</div>
 			<footer class="footer">
 				<img src="images/logo-main.png" alt="">
