--- a/day5.html
+++ b/day5.html
@@ -26,7 +26,7 @@
     <div class="reveal">
       <div class="slides">
         <section>
-          <h1>Coding Basics</h1>
+          <h1>Code Basics</h1>
           <h2 class="brand-teal">JavaScript and the DOM</h2>
         </section>
         <section>
